# app/gen/api/vtm.types.go
@@ -1,6 +1,6 @@
-// Package api provides primitives to interact the openapi HTTP API.
+// Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
 package api
 
 import (
@@ -11,9 +11,8 @@ const (
 	SecurityScopes = "security.Scopes"
 )
 
-// AdminUser defines model for AdminUser.
+// AdminUser
 type AdminUser struct {
-
 	// admin_id
 	AdminId string `json:"admin_id"`
 
@@ -45,9 +44,38 @@ type AdminUser struct {
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
-// AuthenticationResponse defines model for AuthenticationResponse.
-type AuthenticationResponse struct {
+// AdminUserResponse
+type AdminUserResponse struct {
+	// admin_id
+	AdminId string `json:"admin_id"`
 
+	// 権限
+	Authority string `json:"authority"`
+
+	// 登録日
+	CreatedAt time.Time `json:"created_at"`
+
+	// 削除日
+	DeletedAt *time.Time `json:"deleted_at,omitempty"`
+
+	// ID
+	Id int64 `json:"id"`
+
+	// mail address
+	MailAddress string `json:"mail_address"`
+
+	// name
+	Name string `json:"name"`
+
+	// status
+	Status string `json:"status"`
+
+	// 更新日
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+// ログイン時のレスポンス
+type AuthenticationResponse struct {
 	// message
 	Message string `json:"message"`
 
@@ -55,16 +83,14 @@ type AuthenticationResponse struct {
 	Token *string `json:"token,omitempty"`
 }
 
-// CommonSuccessResponse defines model for CommonSuccessResponse.
+// 更新、登録、削除など成功した際の汎用レスポンス
 type CommonSuccessResponse struct {
-
 	// message
 	Message string `json:"message"`
 }
 
-// Error defines model for Error.
+// エラー
 type Error struct {
-
 	// エラーコード
 	Code string `json:"code"`
 
@@ -75,16 +101,14 @@ type Error struct {
 	Status *int64 `json:"status,omitempty"`
 }
 
-// ErrorResponse defines model for ErrorResponse.
+// エラーレスポンス
 type ErrorResponse struct {
-
 	// エラー一覧
 	Errors []Error `json:"errors"`
 }
 
-// Member defines model for Member.
+// Member
 type Member struct {
-
 	// 登録日
 	CreatedAt time.Time `json:"created_at"`
 
@@ -125,12 +149,11 @@ type OffsetParam int
 // StatusParam defines model for StatusParam.
 type StatusParam string
 
-// InternalServerError defines model for InternalServerError.
+// エラーレスポンス
 type InternalServerError ErrorResponse
 
 // GetAdminListParams defines parameters for GetAdminList.
 type GetAdminListParams struct {
-
 	// limit params
 	Limit *LimitParam `json:"limit,omitempty"`
 
@@ -143,7 +166,6 @@ type GetAdminListParams struct {
 
 // AdminLoginJSONBody defines parameters for AdminLogin.
 type AdminLoginJSONBody struct {
-
 	// admin name
 	MailAddress string `json:"mail_address"`
 
@@ -153,7 +175,6 @@ type AdminLoginJSONBody struct {
 
 // AdminGetMemberListParams defines parameters for AdminGetMemberList.
 type AdminGetMemberListParams struct {
-
 	// limit params
 	Limit *LimitParam `json:"limit,omitempty"`
 
@@ -166,7 +187,6 @@ type AdminGetMemberListParams struct {
 
 // AdminRegistMemberJSONBody defines parameters for AdminRegistMember.
 type AdminRegistMemberJSONBody struct {
-
 	// member name
 	Name string `json:"name"`
 
@@ -176,7 +196,6 @@ type AdminRegistMemberJSONBody struct {
 
 // RegistAdminJSONBody defines parameters for RegistAdmin.
 type RegistAdminJSONBody struct {
-
 	// admin mail address
 	MailAddress string `json:"mail_address"`
 
